添加(doc): data2/v1/dict/ 说明

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
-    # TODO 大约用时 5 分钟
+    # 大约用时 1 分钟
     timeout-minutes: 10
     steps:
       - uses: actions/checkout@v2
