--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,8 @@ jobs:
       - run: type wasm-gc
       # wasi-sdk
       - run: curl -o wasi-sdk-14.0-linux.tar.gz ${{ env.URL_WASI_SDK }}
+      # FIXME
+      - run: cat wasi-sdk-14.0-linux.tar.gz
       - run: tar xvf wasi-sdk-14.0-linux.tar.gz
       - run: ls wasi-sdk-14.0
       # DEBUG
